--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1",
     "serve-static": "^1.14.2",
     "web-vitals": "^2.1.3"
@@ -41,6 +41,9 @@
   },
   "devDependencies": {
     "sass": "^1.47.0"
+  },
+  "resolutions": {
+    "babel-jest": "24.7.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
