--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.5",
     "serve-static": "^1.14.2",
     "web-vitals": "^2.1.3"
   },
