--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect": "^3.7.0",
     "express": "^4.17.2",
     "firebase": "^9.6.3",
+    "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -16,6 +17,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "serve-static": "^1.14.2",
     "web-vitals": "^2.1.3"
