--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect": "^3.7.0",
     "express": "^4.17.2",
     "firebase": "^9.6.3",
+    "loader": "^2.1.1",
     "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +22,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "serve-static": "^1.14.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -48,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.47.0"
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.7"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
