--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
+    "rxjs": "^7.5.4",
     "serve-static": "^1.14.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
