--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "rxjs": "^7.5.4",
     "serve-static": "^1.14.2",
